tests/invalid/foreign_procs_exist_type.err_exp3
foreign_procs_exist_type.m:054: In clause for predicate `mercury_test'/2:
foreign_procs_exist_type.m:054:   in argument 1 of call to predicate
foreign_procs_exist_type.m:054:   `foreign_procs_exist_type.make_t'/1:
foreign_procs_exist_type.m:054:   type error: [38;5;87mvariable `T2'[39;49m has type
foreign_procs_exist_type.m:054:     [38;5;203msome [T_2] (T_2);[39;49m
foreign_procs_exist_type.m:054:   expected type was
foreign_procs_exist_type.m:054:     [38;5;40msome [T_3] (T_3).[39;49m
foreign_procs_exist_type.m:090: In clause for predicate `foreign_pred_test'/2:
foreign_procs_exist_type.m:090:   type error: [38;5;87mvariable `HeadVar__2'[39;49m has type
foreign_procs_exist_type.m:090:     [38;5;203msome [T_2] (T_2);[39;49m
foreign_procs_exist_type.m:090:   expected type was
foreign_procs_exist_type.m:090:     [38;5;40msome [T_3] (T_3).[39;49m
foreign_procs_exist_type.m:134: In clause for function `foreign_func_test'/1:
foreign_procs_exist_type.m:134:   type error: [38;5;87mvariable `HeadVar__2'[39;49m has type
foreign_procs_exist_type.m:134:     [38;5;203msome [T_2] (T_2);[39;49m
foreign_procs_exist_type.m:134:   expected type was
foreign_procs_exist_type.m:134:     [38;5;40msome [T_3] (T_3).[39;49m
For more information, recompile with `-E'.
